[package]
name = "my-home"
version = "0.1.0"
authors = ["François <francois@monniot.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "1"
base64 = "0.13"
uuid = { version = "0.8", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["rustls-tls", "hyper-rustls"], default-features = false }
tokio = { version = "1.16", features = ["macros", "rt", "net", "sync", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
futures-core = "0.3"
lifx-core = "0.2"
bytes = "1"
# Update whenever tokio-codec get updated to 0.7 there
# mqtt-protocol = { version = "0.11", features = [ "tokio-codec" ] }
mqtt-protocol = { git = "https://github.com/fmonniot/mqtt-rs", features = [ "tokio-codec" ] }
rustls = "0.20"
tokio-rustls = "0.23.2"
rustls-native-certs = "0.6.1"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0.30"
either = "1.6.1"
pid-lite = "1"
async-trait = "0.1.52"
downcast-rs = "1.2"


embedded-graphics = { version = "0.7.1" }
embedded-layout = "0.2"
embedded-hal = {version = "0.2.6", features = ["unproven"]}
epd-waveshare = { version = "0.5.0" }
tsl_2591 = { path = "../tsl_2591" }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.13.1", features = ["hal-unproven"] }
