[package]
name = "my-home"
version = "0.1.0"
authors = ["François <francois@monniot.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "1"
base64 = "0.21"
uuid = { version = "1.4", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["rustls-tls", "hyper-rustls"], default-features = false }
tokio = { version = "1.31", features = ["macros", "rt", "net", "sync", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
futures-core = "0.3"
lifx-core = "0.4.0"
bytes = "1"
# Update whenever tokio-codec get updated to 0.7 there
# mqtt-protocol = { version = "0.11", features = [ "tokio-codec" ] }
mqtt-protocol = { git = "https://github.com/fmonniot/mqtt-rs", features = [ "tokio-codec" ] }
rustls = "0.21"
tokio-rustls = "0.24.1"
rustls-native-certs = "0.6.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0.44"
either = "1.9.0"
pid-lite = "1"
async-trait = "0.1.72"
downcast-rs = "1.2"
webpki = { version = "0.22" }


embedded-graphics = { version = "0.8.1" }
embedded-layout = "0.3"
embedded-hal = {version = "0.2.6", features = ["unproven"]}
epd-waveshare = { version = "0.5.0" }
tsl_2591 = { path = "../tsl_2591" }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.14.1", features = ["hal-unproven"] }
