[package]
name = "tsl_2591"
version = "0.1.0"
authors = ["François <francois@monniot.eu>"]
edition = "2018"

[dependencies]
embedded-hal = "1.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", default-features = false, features = ["eh1"]}

[target.'cfg(target_os = "linux")'.dev-dependencies]
rppal = { version = "0.22.1", features = ["embedded-hal"] }
