[package]
name = "ui-designer"
version = "0.1.0"
authors = ["François <francois@monniot.eu>"]
edition = "2018"

[dependencies]
my-home = { path = "../my-home" }
embedded-graphics = { version = "0.6.2" }
embedded-graphics-simulator = { version = "0.2.1" }
log = "0.4"
env_logger = "0.8"
sdl2 = "0.32.2"
