[package]
name = "ui-designer"
version = "0.1.0"
authors = ["François <francois@monniot.eu>"]
edition = "2018"

[dependencies]
my-home = { path = "../my-home" }
embedded-graphics = { version = "0.8.0" }
embedded-graphics-simulator = { version = "0.3.0" }
log = "0.4"
env_logger = "0.10"
sdl2 = "0.32.2"
